Fixed width too large
Fixed an issue where the width was too large

--- a/public/css/layout/main-body.css
+++ b/public/css/layout/main-body.css
@@ -1,16 +1,17 @@
-.main-body {
-    display: flex;
-    min-width: 600px;
-    align-items: center;
+/* Desktop/Tablet */
+@media (min-width: 601px) {
+    .main-body {
+        display: flex;
+        align-items: center;
+    } 
 }
 
+/* Mobile */
 @media (max-width: 600px) {
     .main-body {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 10px;
-        background-color: antiquewhite;
     }
-    
 }
